# hawkeye-tennis

./: README.md  out.sh
BallwithLapCam/: BallWithLapCam  BallWithLapCam.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
detection/: CMakeLists.txt
detection/include/detection/: detector.h  locator.h
detection/src/: .detector.cpp.swp  bgvid.cpp  contour.cpp  detector.cpp  locator.cpp  main_detec.cpp
final structure/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  \  calibration  cmake_install.cmake  detection  find_undetected  framepicker  fund_mat  manual_detection  outDetect.sh  params.txt
final structure/data/: output.txt
final structure/include/: calibration.h  detection.h  point_details.h
final structure/src/: CamFrame.cpp  Camera.cpp  calibration.cpp  detection_main.cpp  find_undetected.cpp  framepicker.cpp  fund_mat.cpp  locator.cpp  manual_detection.cpp  point_details.cpp
hawkeye c++/: CMakeLists.txt~
hawkeye c++/avgsub/: CMakeCache.txt  CMakeLists.txt  Makefile  avgsub  avgsub.cpp  cmake_install.cmake
hawkeye c++/avgsub/images/: test2
hawkeye c++/background/: CMakeCache.txt  CMakeLists.txt  Makefile  background  background.cpp  bgedge.cpp  cmake_install.cmake
hawkeye c++/bgedge/: CMakeCache.txt  Makefile  bgedge  bgedge.cpp  cmake_install.cmake
hawkeye c++/calibration/: calib.cpp  chessboardcheck.cpp  pointlocator.cpp  projcheck.cpp
hawkeye c++/cameracalib/: calib.cpp
hawkeye c++/fg/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  fg  fg.cpp
hawkeye c++/new/bg/: CMakeCache.txt  Makefile  bg  bg.cpp  bg.cpp~  cmake_install.cmake
hawkeye c++/new/contour/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  contour  contour.cpp
hawkeye c++/new/fg/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  fg  fg.cpp  fg.cpp~
hawkeye c++/videotest/: bgvid.cpp  color.cpp  contour.cpp
interpolation/: CMakeCache.txt  CMakeLists.txt  Makefile  area.txt  bounce.txt  bounce_area  cmake_install.cmake  cubic.txt  main_area.cpp  out.sh  pts.txt  quadratic.txt  spline  spline_fit  spline_fit_real  time.txt
interpolation/data/: area.txt  bounce.txt  output.txt  pts.txt  time.txt
interpolation/include/interpolation/: integrator.h  point_details.h  pose.h  spline.h  spline_fit.h
interpolation/plots/: plotArea.py  plotData.py  plotPos.py  plotVel.py
interpolation/src/: integrator.cpp  integrator_test.cpp  main.cpp  main_bounce.cpp  main_fit.cpp  main_real.cpp  main_time.cpp  main_xyz.cpp  plot.py  plotArea.py  plotData.py  plotPos.py  plotVel.py  point_details.cpp  spline.cpp  spline_fit.cpp
trial/: CMakeLists.txt  trial.cpp
